--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -27,7 +27,9 @@ app/assets/stylesheets/items/new.css %>
       </div>
     </div>
     <%# /商品画像 %>
+    <%= image_tag item.image, class: 'item-image' if item.image.attached? %>
     <%# 商品名と商品説明 %>
+    
     <div class="new-items">
       <div class="weight-bold-text">
         商品名
