--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,34 +131,34 @@
   
       <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to "#" do %>
-          <div class='item-img-content'>
-            <%= image_tag item.image, class: 'item-img' if item.image.attached? %>
+          <%= link_to item_path(item.id) do %>
+            <div class='item-img-content'>
+              <%= image_tag item.image, class: 'item-img' if item.image.attached? %>
 
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+
             </div>
-
-          </div>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= item.nickname %>
-            </h3>
-            <div class='item-price'>
-              <span><%= item.fee %>円<br><%= item.delivery_charge.name %></span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                <%= item.nickname %>
+              </h3>
+              <div class='item-price'>
+                <span><%= item.fee %>円<br><%= item.delivery_charge.name %></span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                  <span class='star-count'>0</span>
+                </div>
               </div>
             </div>
-          </div>
           <% end %>
         </li>
       <% end %>
     
       <% if @items.length == 0 %>
         <li class='list'>
-          <%= link_to '#' do %>
+          <%= link_to '#', item_path(@item.id) do %>
           <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
             <div class='item-info'>
               <h3 class='item-name'>
