--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,11 +134,11 @@
           <%= link_to item_path(item.id) do %>
             <div class='item-img-content'>
               <%= image_tag item.image, class: 'item-img' if item.image.attached? %>
-
-              <div class='sold-out'>
-                <span>Sold Out!!</span>
-              </div>
-
+              <% if item.purchase.present? %>
+                <div class="sold-out">
+                  <span>Sold Out!!</span>
+                </div>
+              <% end %>
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
@@ -158,7 +158,7 @@
     
       <% if @items.length == 0 %>
         <li class='list'>
-          <%= link_to '#', item_path(@item.id) do %>
+          <%= link_to '#' do %>
           <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
             <div class='item-info'>
               <h3 class='item-name'>
